working on ex01

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,7 +1,7 @@
 NAME= polymprphism
 CXX= c++
 RM= rm -rf
-CXXFLAGS= -Werror -Wextra -Wall -Wshadow -std=c++98
+CXXFLAGS= -Werror -Wextra -Wall -std=c++98
 SRC= main.cpp Animal/Animal.cpp Animal/Derived.cpp WrongAnimal/WrongAnimal.cpp WrongAnimal/WrongCat.cpp \
 Brain/Brain.cpp
 OBJ=$(SRC:.cpp=.o)
