--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,7 +1,7 @@
 NAME= polymprphism
 CXX= c++
 RM= rm -rf
-CXXFLAGS= -Werror -Wextra -Wall -Wshadow -std=c++98
+CXXFLAGS= -Werror -Wextra -Wall -std=c++98
 SRC= main.cpp Animal.cpp Derived.cpp WrongAnimal.cpp WrongCat.cpp
 OBJ=$(SRC:.cpp=.o)
 
