--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -2,7 +2,7 @@ NAME= interface
 CXX= c++
 RM= rm -rf
 CXXFLAGS= -Werror -Wextra -Wall -std=c++98
-SRC= main.cpp AMateria.cpp Ice.cpp
+SRC= main.cpp AMateria.cpp Character.cpp Ice.cpp Cure.cpp ICharacter.cpp
 OBJ=$(SRC:.cpp=.o)
 
 all: $(NAME)
