modified main ex03

--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -1,7 +1,7 @@
 NAME= interface
 CXX= c++
 RM= rm -rf
-CXXFLAGS= -Werror -Wextra -Wall -std=c++98 -fsanitize=address -g3
+CXXFLAGS= -Werror -Wextra -Wall -std=c++98
 SRC= main.cpp AMateria.cpp Character.cpp Ice.cpp Cure.cpp MateriaSource.cpp
 OBJ=$(SRC:.cpp=.o)
 
